Fix logo alignment in Classic theme RTL
git-svn-id: http://textpattern.googlecode.com/svn/development/4.x@5510 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/theme/classic/textpattern.css
+++ b/textpattern/theme/classic/textpattern.css
@@ -1102,7 +1102,7 @@ body {
 
 #branding {
 	font-size: 1em;
-	margin: 0 0 0 2em;
+	margin: 0 2em;
 	width: 9em;
 	height: 2.5em;
 	line-height: 2.5;
